 * Language and i18n:
   * Updated translations: British English, Galician, Italian, Latin,
      Portuguese, Portuguese (Brazil)
 * Lua API:
   * new wesnoth.get_time_stamp() function
   * new helper.shuffle() function
   * The wesnoth.transform_unit() function no longer performs a full heal. It
     will (still) enforce the resulting unit's maximum hit points, though.
 * Multiplayer:
   * Moved new lobby option in Preferences -> Multiplayer to Advanced
     Preferences and clarified description
 * User interface:
   * Allow copying the selection in the old (default) lobby using
     Ctrl+C/Command+C (bug #5877)
 * WML engine:
   * [unit_overlay] and [remove_unit_overlay] now return a more meaningful
     error message if the image= key is missing
   * When not replacing values, [effect] apply_to=defense will now modify
     absolute values instead of signed values (bug #20242). This allows for
     cleaner WML when the unit type is not necessarily known in advance.
   * Split the 'not_living' unit status into 'unpoisonable', 'undrainable' and
     'unplagueable'. 'not_living' now acts on the whole group
   * The bugs with sighted events have been resolved.
   * A unit's maximum hit points are more regularly applied. This affects
     [transform_unit], [effect]apply_to=type, and [effect]apply_to=variation.
 * Miscellaneous and bug fixes:
   * The undo stack is preserved across a save-reload.
   * Removed several unused private member variables.
   * Fixed the present in-game command line autocompletion feature so it
     actually works without using :debug
   * Removed recognition of the --smallgui command line option, which has been
     superfluous since 1.9.5.

Version 1.11.1:
 * AI:
   * New AI: Experimental AI
     * Improved recruitment, castle and village management over current default AI
 * Campaigns:
   * Dead Water:
     * Removed duplicated loyalty overlay (that now is in core), and used
       {IS_LOYAL} macro